# Sigmod2018PC

./: .gitignore  CMakeLists.txt  Hash.cpp  Joiner.cpp  MemoryPool.cpp  Operators.cpp  Parser.cpp  Query2SQL.cpp  README  Relation.cpp  Utils.cpp  buddy.cpp  compile.sh  extract_tar.sh  harness.cpp  main.cpp  perfout.txt.0320  run.sh  runTestharness.sh
include/: Column.hpp  Config.hpp  Hash.hpp  Joiner.hpp  MemoryPool.hpp  Operators.hpp  Parser.hpp  Relation.hpp  Timer.hpp  Utils.hpp  buddy.hpp
lib/: libboost_thread.a1
test/: CMakeLists.txt  TestOperators.cpp  TestParser.cpp  TestRelation.cpp  main.cpp
workloads/small/: small2.result  small2.work
